tests/purs/failing/QualifiedOperators.purs
-- @shouldFailWith UnknownName
module Main where

test = 4 Foo.Bar.-#- 10
